# AOC24

./: .gitignore  CMakeLists.txt  README.MD
src/: day1.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  day_utils.cc  day_utils.h  days.h  main.cc
